# KanbanXproject

./: .gitignore  AGENT_EXAMPLES.md  Agent-options.md  GEN_AI_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  Specify-instructions.md  TESTING_GUIDE.md  application.md  docker-compose.yml  package.json  pyproject.toml  start-servers.sh  status.sh  stop-servers.sh  test-agent-llm.sh  test-api.sh
.specify/memory/: constitution.md
backend/: .env.example  .eslintrc.js  Dockerfile  debug-task.js  package.json  tsconfig.json
backend/migrations/: 001_initial.sql
backend/src/: index.ts  server.ts
backend/src/config/: database.ts
backend/src/middleware/: auth.ts
backend/src/routes/: agent.ts  auth.ts  mcp.ts  tasks.ts
backend/src/services/: llm.ts
backend/src/types/: index.ts
backend/src/utils/: migrations.ts
frontend/: .eslintrc.cjs  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: AgentChat.tsx  Board.tsx  Column.tsx  Login.tsx  TaskCard.tsx  TaskModal.tsx
frontend/src/services/: agent.ts  api.ts
frontend/src/types/: index.ts
specs/001-kanban-board/: plan.md  spec.md  tasks.md
specs/002-kanbanx-mcp/: plan.md  spec.md  tasks.md
src/: __init__.py  main.py
src/static/: index.html
src/static/css/: styles.css
src/static/js/: api.js  board.js  main.js
